// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one tablet slice 1`] = `
<div>
  <div>
    <TileU
      tileName="lead"
    />
    <TileC
      tileName="support"
    />
  </div>
</div>
`;

exports[`2. lead one full width tablet slice 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`3. secondary four tablet slice 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`4. secondary two and two slice 1`] = `
<div>
  <div>
    <div>
      <TileV
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileV
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <TileG
      tileName="support1"
    />
  </div>
  <div />
  <div>
    <TileG
      tileName="support2"
    />
  </div>
</div>
`;
